clusters/apps/env/production/media/azuracast/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: azuracast
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: radio.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`radio.${FAMILY_DOMAIN}`)"
      services:
        - name: azuracast
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: radio.${FAMILY_DOMAIN}
